# cube-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: 1x1.blend  ball.blend
content/: 1x1.glb  ball.glb
scripts/: build-shaders.py  compile-shaders.py
shaders/: basic_triangle.frag  basic_triangle.vert  light_source.frag  light_source.vert
source/: Camera.cpp  Camera.hpp  ContentManager.cpp  ContentManager.hpp  Context.cpp  Context.hpp  InputService.hpp  MeshData.hpp  PositionColorVertex.hpp  Scene.cpp  Scene.hpp  Transform.hpp  main.cpp
source/graphics/: MeshHandle.hpp  PipelineCreateInfo.hpp  PositionNormalColorVertex.hpp  RenderService.cpp  RenderService.hpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  ShaderCreateInfo.hpp
source/graphics/shaders/: .gitignore
source/graphics/uniforms/: DirectionalLight.hpp  Material.hpp  PointLight.hpp
source/graphics/vertices/: PositionNormalColorVertex.hpp  PositionNormalTextureVertex.hpp
source/macros/: log.hpp  singleton.hpp  types.hpp
source/physics/: BPLayerInterfaceImpl.hpp  BroadPhaseLayers.hpp  Layers.hpp  ObjectLayerPairFilterImpl.hpp  ObjectVsBroadPhaseLayerFilterImpl.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsService.cpp  PhysicsService.hpp
